--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,12 +1,12 @@
 - name: restart apache2
   service:
     name: apache2
-    status: restarted
+    state: restarted
 - name: restart httpd
   systemd:
     name: httpd
-    status: restarted
+    state: restarted
 - name: restart apache24
   service:
     name: apache24
-    status: restarted
+    state: restarted
