--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,17 +1,20 @@
+---
 - name: Install apache on Debian
-  pkg:
-    name: apache2
-    status: latest
+  package:
+    name: 
+      - apache2
+      - python-apt
+    state: latest
   when: ansible_os_family == "Debian"
 - name: Install apache on RedHat
-  pkg:
+  package:
     name: httpd
-    status: latest
+    state: latest
   when: ansible_os_family == "RedHat"
 - name: Install apache on FreeBSD
-  pkg:
+  package:
     name: apache24
-    status: latest
+    state: latest
   when: ansible_os_family == "FreeBSD"
 - name: Configuring apache2 service "Server name" on 'Debian'
   lineinfile:
